--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: diamondGirl;
-    src: url("../images/diamondGirl.ttf");
+    src: url("../images/diamondGirl.otf");
 }
 
 @font-face {
