Changed header font to bold and made larger

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,8 +22,8 @@ body {
 
 h1 {
     font-family: diamondGirl;
-    font-size: 78px;
-    font-weight: normal;
+    font-size: 125px;
+    font-weight: bolder;
     color: rgb(161, 123, 26);
 }
 
